Refactorizacion total del proyecto. Ordenados los files.

--- a/src/package.json
+++ b/src/package.json
@@ -1,9 +1,8 @@
 {
    "name": "concu-debug",
-   "main": "nw-main.html",
+   "main": "index.html",
    "window":{
-      "toolbar":false
-   },
-   "nodejs": false
+      "toolbar":true
+   }
 }
 
