Finalizado el test del modulo gdb. BugFixes varios

--- a/src/cppTestCode/makefile
+++ b/src/cppTestCode/makefile
@@ -1,4 +1,12 @@
-all: Prueba
+all: Prueba testExe
+
+defines= -D espera
 
 Prueba: prueba.cpp
-	g++ -g -o Prueba prueba.cpp
+	g++ -g $(defines) -o Prueba prueba.cpp
+	
+testExe: testExe.cpp
+	g++ -g -o testExe testExe.cpp
+	
+clean:
+	rm Prueba testExe
