--- a/config/publish_subscribe.cfg
+++ b/config/publish_subscribe.cfg
@@ -8,7 +8,7 @@ listen_queue_len = 10
 wait_on_address = localhost
 wait_on_port = 5555
 
-log_level = LOG_DEBUG
+log_level = LOG_INFO
 
 show_stats = yes
 stats_file = notifier.stats
