Implementacion y test para obtener variables de un scope local. Gdb devuelve de una los valores de un struct o una clase, el unico problema a resolver son los punteros. Cambie ligeramente la funcion de insertar breakpoint para que se le pueda pasar como ubicacion una funcion, una linea o una direccion de memoria updates #3

--- a/src/cppTestCode/makefile
+++ b/src/cppTestCode/makefile
@@ -1,4 +1,4 @@
-all: Prueba testExe
+all: Prueba testExe testVariables
 
 defines= -D espera
 
@@ -8,5 +8,8 @@ Prueba: prueba.cpp
 testExe: testExe.cpp
 	g++ -g -o testExe testExe.cpp
 	
+testVariables: testVariables.cpp
+	g++ -g -o testVariables testVariables.cpp 
+	
 clean:
-	rm Prueba testExe
+	rm Prueba testExe testVariables
