#1 Subido un caso de uso de dos procesos que son debugeados a la vez. GDB tiene un soporte para correr ambos en paralelo pero no funciona en todos los targets. closes #1.

--- a/src/cppTestCode/makefile
+++ b/src/cppTestCode/makefile
@@ -7,6 +7,9 @@ Prueba: prueba.cpp
 	
 testExe: testExe.cpp
 	g++ -g -o testExe testExe.cpp
+
+write_one_char_at_time: write_one_char_at_time.c
+	gcc -std=c99 -g -o write_one_char_at_time write_one_char_at_time.c
 	
 testVariables: testVariables.cpp
 	g++ -g -o testVariables testVariables.cpp 
