Cambio el evento de gdb para que sea algo mas especifico agregando el klass o type, segun corresponda. issue #30

--- a/src/cppTestCode/makefile
+++ b/src/cppTestCode/makefile
@@ -15,4 +15,4 @@ testVariables: testVariables.cpp
 	g++ -g -o testVariables testVariables.cpp 
 	
 clean:
-	rm Prueba testExe testVariables
+	rm Prueba testExe testVariables write_one_char_at_time
