Agregado al makefile principal la opcion de compilar el modulo ipc. Modificado un makefile interno de ipc para que limpie algunos .o y .pyc ante un make clean. close #17.

--- a/src/makefile
+++ b/src/makefile
@@ -1,4 +1,7 @@
-all: Shared TestCode
+all: IPC Shared TestCode
+
+IPC:
+	$(MAKE) --no-print-directory -C ./ipc
 
 Shared:
 	$(MAKE) -C ./shared
@@ -7,5 +10,6 @@ TestCode:
 	$(MAKE) -C ./cppTestCode
 	
 clean:
+	$(MAKE) --no-print-directory -C ./ipc clean
 	$(MAKE) -C ./shared clean
 	$(MAKE) -C ./cppTestCode clean
