Implementada una ventana de splash para ser mostrada mientras se carga la ventana principal. (issue #54).

--- a/src/package.json
+++ b/src/package.json
@@ -2,7 +2,9 @@
    "name": "concu-debug",
    "main": "index.html",
    "window":{
-      "toolbar":true
+      "toolbar":true,
+      "frame":true,
+      "show":false
    }
 }
 
