Documentado el codigo de ejemplo (issue #71).

--- a/src/cppTestCode/simplified_unix_tools/Makefile
+++ b/src/cppTestCode/simplified_unix_tools/Makefile
@@ -1,8 +1,10 @@
 all:
 	gcc -std=c99 -g -o echo echo.c
 	gcc -std=c99 -g -o true true.c
+	gcc -std=c99 -g -o cat cat.c
 
 clean:
 	rm -f echo
 	rm -f true
+	rm -f cat
 	rm -f *.o
