Hago prueba con un binario, hay un bug donde gdb espera mensaje con gdbPid@txt, pero se envia targetPid@txt. Hay que tener cuidado ya que cualquier comando (next, step, continue) lo toma como stdin.... habria que investigar si se puede separar. refers #84

--- a/src/cppTestCode/makefile
+++ b/src/cppTestCode/makefile
@@ -1,6 +1,6 @@
 .PHONY: multiple_files simplified_unix_tools
 
-all: Prueba testExe testVariables write_one_char_at_time multiplesPunteros multiple_files simplified_unix_tools outputTest
+all: Prueba testExe testVariables write_one_char_at_time multiplesPunteros multiple_files simplified_unix_tools outputTest stdinTest
 
 defines= -D espera
 
@@ -22,13 +22,16 @@ multiplesPunteros: multiplesPunteros.cpp
 multiple_files:
 	$(MAKE) --no-print-directory -C ./multiple_files
 	
-outputTest:
+outputTest: outputTest.cpp
 	g++ -g -o outputTest outputTest.cpp
+	
+stdinTest: stdinTest.cpp
+	g++ -g -o stdinTest stdinTest.cpp
 
 simplified_unix_tools:
 	$(MAKE) --no-print-directory -C ./simplified_unix_tools
 
 clean:
-	rm Prueba testExe testVariables write_one_char_at_time multiplesPunteros outputTest
+	rm Prueba testExe testVariables write_one_char_at_time multiplesPunteros outputTest stdinTest
 	$(MAKE) --no-print-directory -C ./multiple_files clean
 	$(MAKE) --no-print-directory -C ./simplified_unix_tools clean
