Agregadas mas reglas para ignorar algunos ejecutables y dejarlos fuera del repositorio de git.

--- a/src/cppTestCode/.gitignore
+++ b/src/cppTestCode/.gitignore
@@ -4,3 +4,9 @@
 /testVariables
 /write_one_char_at_time
 /ipcDetection
+outputTest
+simplified_unix_tools/cat
+simplified_unix_tools/echo
+simplified_unix_tools/true
+stdinTest
+
