--- a/config/global.cfg
+++ b/config/global.cfg
@@ -1,2 +1,21 @@
 [gdb]
 use-gdb-system = True
+
+[notifier]
+name = notifier
+
+pid_file = notifier.pid
+foreground = no
+
+listen_queue_len = 10
+wait_on_address = localhost
+wait_on_port = 5555
+
+log_level = LOG_ERR
+
+show_stats = no
+stats_file = notifier.stats
+
+[gdbspawner]
+name = (gdb spawner)
+log_level = LOG_ERR
