Refactorizacion mayor al plugin de strace haciendo uso de la nueva interfaz de los plugins.

--- a/config/global.cfg
+++ b/config/global.cfg
@@ -11,7 +11,7 @@ listen_queue_len = 10
 wait_on_address = localhost
 wait_on_port = 5555
 
-log_level = LOG_ERR
+log_level = LOG_INFO
 
 show_stats = no
 stats_file = notifier.stats
@@ -19,3 +19,8 @@ stats_file = notifier.stats
 [gdbspawner]
 name = (gdb spawner)
 log_level = LOG_ERR
+
+[gdbplugin]
+name = (gdb plugin)
+log_level = LOG_ERR
+#plugin_directory = <<path to the plugins' directory>>
