Creados comandos para controlar al plugin de strace.

--- a/config/global.cfg
+++ b/config/global.cfg
@@ -11,7 +11,7 @@ listen_queue_len = 10
 wait_on_address = localhost
 wait_on_port = 5555
 
-log_level = LOG_INFO
+log_level = LOG_ERR
 
 show_stats = no
 stats_file = notifier.stats
