--- a/src/cppTestCode/threads/Makefile
+++ b/src/cppTestCode/threads/Makefile
@@ -1,6 +1,7 @@
 all:
 	gcc -ggdb -o two_pthreads two_pthreads.c -lpthread
+	gcc -ggdb -o three_pthreads three_pthreads.c -lpthread
 
 clean:
-	rm -f two_pthreads
+	rm -f two_pthreads three_pthreads
 
