Creada una toolbar para el modo develop para abrir las DevTools y Refrescar la ui. Con esa toolbar puesta no hya necesidad de usar la toolbar de NW asi que se la remueve.

--- a/src/package.json
+++ b/src/package.json
@@ -2,7 +2,7 @@
    "name": "concu-debug",
    "main": "index.html",
    "window":{
-      "toolbar":true,
+      "toolbar":false,
       "frame":true,
       "show":false
    }
