Ahora cuando se cierra la UI se cierra el backend en python.

--- a/config/global.cfg
+++ b/config/global.cfg
@@ -1,3 +1,7 @@
+[ui]
+#node-webkit-path = <<path to the Node Webkit (NW) executable>>
+#udev-lib-path = <<path to the UDEV Library (dependency of  Node Webkit)>>
+
 [gdb]
 use-gdb-system = True
 
