Removidos varios scripts auxiliares. Ahora es el main de python quien busca las libs y el ejecutable de node-webit directamente (sacando los paths del archivo de configuracion)

--- a/config/global.cfg
+++ b/config/global.cfg
@@ -1,6 +1,6 @@
 [ui]
-#node-webkit-path = <<path to the Node Webkit (NW) executable>>
-#udev-lib-path = <<path to the UDEV Library (dependency of  Node Webkit)>>
+node-webkit-executable-path = /usr/bin/nw
+udev-lib-path = /usr/lib/
 
 [gdb]
 use-gdb-system = True
