--- a/config/global.cfg
+++ b/config/global.cfg
@@ -23,6 +23,7 @@ stats_file = notifier.stats
 [gdbspawner]
 name = (gdb spawner)
 log_level = LOG_ERR
+count_gdbs_at_begin = 1
 
 [gdbplugin]
 name = (gdb plugin)
