Ejemplo mostrado en el issue #108 andando en nw.

--- a/src/package.json
+++ b/src/package.json
@@ -1,6 +1,7 @@
 {
    "name": "concu-debug",
    "main": "index.html",
+   "chromium-args": "--disable-setuid-sandbox",
    "window":{
       "toolbar":true,
       "frame":true,
