Creado un ejemplo con multiples threads y multiples files.

--- a/src/cppTestCode/threads/Makefile
+++ b/src/cppTestCode/threads/Makefile
@@ -1,7 +1,9 @@
 all:
 	gcc -ggdb -o two_pthreads two_pthreads.c -lpthread
 	gcc -ggdb -o three_pthreads three_pthreads.c -lpthread
+	$(MAKE) --no-print-directory -C ./merge_sort
 
 clean:
 	rm -f two_pthreads three_pthreads
+	$(MAKE) --no-print-directory -C ./merge_sort clean
 
