Minimos cambios a las barras de resize de las columnas de una grilla. Aun tienen un bug cuando se esta haciendo el resize pero el mouse no esta sobre la barra, el css deja de ser hover y queda la barra sin resaltar dando un mensaje confuso: la barra no parece estar activa pero aun el resize sigue en marcha. Agregado unos iconos para que se muestren en el ejecutable.

--- a/src/package.json
+++ b/src/package.json
@@ -4,7 +4,8 @@
    "window":{
       "toolbar":false,
       "frame":true,
-      "show":false
+      "show":false,
+      "icon": "resources/iconw.png"
    }
 }
 
