Cambiado el momento de resize para que coincida con el del renderizado, ahora el resize funciona con los sliders internos. Agregado botonera de navegacion.

--- a/config/global.cfg
+++ b/config/global.cfg
@@ -23,4 +23,4 @@ log_level = LOG_ERR
 [gdbplugin]
 name = (gdb plugin)
 log_level = LOG_ERR
-#plugin_directory = <<path to the plugins' directory>>
+plugin_directory = /home/nicolas/git/ConcuDebug/src/py/gdb/Plugins
