Se recolecta la informacion de las colas de mensajes y se imprimen por pantalla. Test minimo para crear y borrar colas de mensajes

--- a/src/cppTestCode/makefile
+++ b/src/cppTestCode/makefile
@@ -1,6 +1,6 @@
 .PHONY: multiple_files simplified_unix_tools threads
 
-all: Prueba testExe testVariables write_one_char_at_time multiplesPunteros multiple_files simplified_unix_tools outputTest stdinTest threads semTest
+all: Prueba testExe testVariables write_one_char_at_time multiplesPunteros multiple_files simplified_unix_tools outputTest stdinTest threads semTest msgTest
 
 defines= -D espera
 
@@ -30,6 +30,9 @@ stdinTest: stdinTest.cpp
 	
 semTest: semTest.cpp
 	g++ -g -o semTest semTest.cpp
+	
+msgTest: msgTest.cpp
+	g++ -g -o msgTest msgTest.cpp
 
 simplified_unix_tools:
 	$(MAKE) --no-print-directory -C ./simplified_unix_tools
@@ -38,7 +41,7 @@ threads:
 	$(MAKE) --no-print-directory -C ./threads
 
 clean:
-	rm Prueba testExe testVariables write_one_char_at_time multiplesPunteros outputTest stdinTest semTest
+	rm Prueba testExe testVariables write_one_char_at_time multiplesPunteros outputTest stdinTest semTest msgTest
 	$(MAKE) --no-print-directory -C ./multiple_files clean
 	$(MAKE) --no-print-directory -C ./simplified_unix_tools clean
 	$(MAKE) --no-print-directory -C ./threads clean
