Se carga el plugin del forkDetector (ld_preload). Codigo de prueba para el fork.

--- a/src/cppTestCode/makefile
+++ b/src/cppTestCode/makefile
@@ -1,6 +1,6 @@
 .PHONY: multiple_files simplified_unix_tools threads
 
-all: Prueba testExe testVariables write_one_char_at_time multiplesPunteros multiple_files simplified_unix_tools outputTest stdinTest threads semTest msgTest
+all: Prueba testExe testVariables write_one_char_at_time multiplesPunteros multiple_files simplified_unix_tools outputTest stdinTest threads semTest msgTest forkTest
 
 defines= -D espera
 
@@ -33,6 +33,9 @@ semTest: semTest.cpp
 	
 msgTest: msgTest.cpp
 	g++ -g -o msgTest msgTest.cpp
+	
+forkTest: forkTest.cpp
+	g++ -g -o forkTest forkTest.cpp
 
 simplified_unix_tools:
 	$(MAKE) --no-print-directory -C ./simplified_unix_tools
@@ -41,7 +44,7 @@ threads:
 	$(MAKE) --no-print-directory -C ./threads
 
 clean:
-	rm Prueba testExe testVariables write_one_char_at_time multiplesPunteros outputTest stdinTest semTest msgTest
+	rm Prueba testExe testVariables write_one_char_at_time multiplesPunteros outputTest stdinTest semTest msgTest forkTest
 	$(MAKE) --no-print-directory -C ./multiple_files clean
 	$(MAKE) --no-print-directory -C ./simplified_unix_tools clean
 	$(MAKE) --no-print-directory -C ./threads clean
