--- a/config/global.cfg
+++ b/config/global.cfg
@@ -24,6 +24,7 @@ stats_file = notifier.stats
 name = (gdb spawner)
 log_level = LOG_ERR
 count_gdbs_at_begin = 1
+auto_continue = False
 
 [gdbplugin]
 name = (gdb plugin)
